--- a/index.html
+++ b/index.html
@@ -3,7 +3,320 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sandeep Machiraju - Frontend Developer</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      body {
+        background: #0a192f;
+        color: #8892b0;
+        line-height: 1.6;
+      }
+
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+
+      header {
+        padding: 20px 0;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        background: rgba(10, 25, 47, 0.95);
+        z-index: 1000;
+      }
+
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .logo {
+        color: #64ffda;
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      .nav-links {
+        display: flex;
+        gap: 30px;
+      }
+
+      .nav-links a {
+        color: #ccd6f6;
+        text-decoration: none;
+        transition: color 0.3s;
+      }
+
+      .nav-links a:hover {
+        color: #64ffda;
+      }
+
+      .hero {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        padding-top: 80px;
+      }
+
+      .hero-content h1 {
+        font-size: 60px;
+        color: #ccd6f6;
+        margin-bottom: 20px;
+      }
+
+      .hero-content h2 {
+        font-size: 40px;
+        color: #8892b0;
+        margin-bottom: 20px;
+      }
+
+      .hero-content p {
+        max-width: 600px;
+        margin-bottom: 30px;
+      }
+
+      .cta-button {
+        display: inline-block;
+        padding: 15px 30px;
+        background: transparent;
+        border: 1px solid #64ffda;
+        color: #64ffda;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: all 0.3s;
+      }
+
+      .cta-button:hover {
+        background: rgba(100, 255, 218, 0.1);
+      }
+
+      section {
+        padding: 100px 0;
+      }
+
+      .section-title {
+        color: #ccd6f6;
+        font-size: 32px;
+        margin-bottom: 50px;
+      }
+
+      .skills-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 20px;
+        margin-bottom: 50px;
+      }
+
+      .skill-card {
+        background: #112240;
+        padding: 20px;
+        border-radius: 5px;
+        text-align: center;
+        transition: transform 0.3s;
+      }
+
+      .skill-card:hover {
+        transform: translateY(-5px);
+      }
+
+      .skill-card i {
+        font-size: 40px;
+        color: #64ffda;
+        margin-bottom: 15px;
+      }
+
+      .projects-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 30px;
+      }
+
+      .project-card {
+        background: #112240;
+        padding: 25px;
+        border-radius: 5px;
+        transition: transform 0.3s;
+      }
+
+      .project-card:hover {
+        transform: translateY(-5px);
+      }
+
+      .project-card h3 {
+        color: #ccd6f6;
+        margin-bottom: 15px;
+      }
+
+      .contact-form {
+        max-width: 600px;
+        margin: 0 auto;
+      }
+
+      .form-group {
+        margin-bottom: 20px;
+      }
+
+      input,
+      textarea {
+        width: 100%;
+        padding: 12px;
+        background: #112240;
+        border: 1px solid #233554;
+        color: #ccd6f6;
+        border-radius: 5px;
+      }
+
+      .social-links {
+        display: flex;
+        gap: 20px;
+        margin-top: 30px;
+      }
+
+      .social-links a {
+        color: #8892b0;
+        font-size: 24px;
+        transition: color 0.3s;
+      }
+
+      .social-links a:hover {
+        color: #64ffda;
+      }
+
+      footer {
+        text-align: center;
+        padding: 20px 0;
+        background: #112240;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="container">
+        <div class="logo">SM</div>
+        <div class="nav-links">
+          <a href="#about">About</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#contact">Contact</a>
+        </div>
+      </nav>
+    </header>
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero-content">
+          <h1>Hi, I'm Sandeep Machiraju</h1>
+          <h2>Frontend Developer</h2>
+          <p>
+            With 5 years of experience crafting beautiful and performant web
+            applications. I specialize in building exceptional digital
+            experiences using modern web technologies.
+          </p>
+          <a href="#contact" class="cta-button">Get In Touch</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="container">
+      <h2 class="section-title">About Me</h2>
+      <p>
+        I'm a passionate frontend developer with 5 years of experience in
+        building responsive and user-friendly web applications. I love turning
+        complex problems into simple, beautiful, and intuitive designs. When I'm
+        not coding, you can find me exploring new technologies or contributing
+        to open-source projects.
+      </p>
+    </section>
+
+    <section id="skills" class="container">
+      <h2 class="section-title">Skills & Technologies</h2>
+      <div class="skills-grid">
+        <div class="skill-card">
+          <i class="fab fa-html5"></i>
+          <h3>HTML5</h3>
+        </div>
+        <div class="skill-card">
+          <i class="fab fa-css3-alt"></i>
+          <h3>CSS3</h3>
+        </div>
+        <div class="skill-card">
+          <i class="fab fa-js"></i>
+          <h3>JavaScript</h3>
+        </div>
+        <div class="skill-card">
+          <i class="fab fa-react"></i>
+          <h3>React</h3>
+        </div>
+        <div class="skill-card">
+          <i class="fab fa-node-js"></i>
+          <h3>Next.js</h3>
+        </div>
+        <div class="skill-card">
+          <i class="fas fa-code"></i>
+          <h3>TypeScript</h3>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="container">
+      <h2 class="section-title">Featured Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>E-commerce Platform</h3>
+          <p>
+            A full-featured online shopping platform built with Next.js and
+            TypeScript
+          </p>
+        </div>
+        <div class="project-card">
+          <h3>Dashboard Analytics</h3>
+          <p>Real-time analytics dashboard using React and D3.js</p>
+        </div>
+        <div class="project-card">
+          <h3>Social Media App</h3>
+          <p>Modern social networking application with React and Firebase</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="container">
+      <h2 class="section-title">Get In Touch</h2>
+      <div class="contact-form">
+        <div class="form-group">
+          <input type="text" placeholder="Name" id="name" />
+        </div>
+        <div class="form-group">
+          <input type="email" placeholder="Email" id="email" />
+        </div>
+        <div class="form-group">
+          <textarea placeholder="Message" id="message" rows="5"></textarea>
+        </div>
+        <button class="cta-button" onclick="submitForm()">Send Message</button>
+      </div>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+    </section>
+
+    <footer>
+      <p>© 2024 Sandeep Machiraju. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
